--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -17,6 +17,22 @@ body {
 }
 
 .swiper {
-    width: 600px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #444;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
