more slider changes

--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -24,7 +24,7 @@ body {
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #444;
+    background: var(--light-green);
     display: flex;
     justify-content: center;
     align-items: center;
