--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -16,6 +16,7 @@ body {
     padding-bottom: 0;
 }
 
+
 .swiper {
     width: 100%;
     height: 100%;
@@ -24,12 +25,22 @@ body {
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: var(--light-green);
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius:3.6rem;
+    border-radius:2rem;
     padding: 20px;
+    color: #000;
+
+    &:nth-child(3n-1) {
+        background: var(--light-green) !important;
+      }
+      &:nth-child(3n-2) {
+        background: var(--light-blue) !important;
+      }
+      &:nth-child(3n-3) {
+        background: var(--light-grey) !important;
+      }
   }
 
   .swiper-slide img {
@@ -37,4 +48,15 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius:10px;
   }
+
+h3{
+    font-size: 25px;
+    font-weight:600;
+}
+
+.event-details{
+    text-align:left;
+    margin-top:10px;
+}
