--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -47,7 +47,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit:contain;
   border-radius:10px;
 }
 
@@ -63,20 +63,27 @@ h3{
 
 @media screen and (max-width: 959px){
   .swiper-slide{
-    display:grid;
+    display:grid !important;
     grid-template-rows: auto auto;
-    grid-template-columns: .5fr 2fr;
-    grid-row-gap: 10px;
-    grid-column-gap: 10px;
+    grid-template-columns: .5fr 1fr;
+    grid-row-gap: 20px;
+    grid-column-gap: 20px;
     grid-auto-columns: 1fr;
   }
 
   .event-banner{
     grid-column: 1;
     grid-row: 1;
+    align-self: flex-start;
+  }
+
+  .swiper-slide img{
+    align-content:flex-start;
+    align-self:flex-start;
   }
   .event-details{
     grid-column:2;
     grid-row:1;
-  }
+    align-items:flex-start;
+    }
 }
