--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -20,7 +20,7 @@
 .swiper-slide {
   text-align: center;
   font-size: 18px;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   border-radius:2rem;
