--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -18,6 +18,7 @@
   }
 
 .swiper-slide {
+  cursor:grab;
   text-align: center;
   font-size: 18px;
   display: block;
@@ -56,6 +57,10 @@ h3{
     margin-top:10px;
 }
 
+.detail-accordion{
+  text-align:left;
+}
+
 @media screen and (max-width: 959px){
   .swiper-slide{
     display:grid !important;
@@ -81,4 +86,9 @@ h3{
     grid-row:1;
     align-items:flex-start;
     }
+
+  .detail-accordion{
+    grid-column:2;
+    grid-row:2;
+  }
 }
