--- a/assets/css/events.css
+++ b/assets/css/events.css
@@ -57,13 +57,6 @@ h3{
     text-align: right;
 }
 
-.event-register-cell{
-    grid-column: 3;
-    grid-row: 2;
-    justify-content: flex-end;
-    display: flex;
-    align-self: end;
-}
 
 .event-category{
     background-color: var(--dark-green);
@@ -75,19 +68,26 @@ h3{
     position: relative;
 }
 
+.event-register-cell{
+    grid-column: 3;
+    grid-row: 2;
+    justify-content: flex-end;
+    display: flex;
+    align-self: end;
+}
 .register-button{
     transition:0.3s;
-    background-color: #e4ea6c;
     align-items:center;
     color:#313844;
     border-radius: 10rem;
     padding: .5rem 3.1rem;
-    border: 1px solid #000;
+    border: 1px solid #313844;
 }
 
 .register-button:hover{
     transition: 0.3s;
     background-color: #000;
+    border: 1px solid #fff;
     color: #fff;
     align-items:center;
     text-decoration: none;
