--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -110,7 +110,7 @@ h3{
 
 @media screen and (min-width: 960px){
   .swiper-slide{
-    height:365px;
+    height:450px;
   }
 }
 
@@ -118,7 +118,7 @@ h3{
   .swiper-slide{
     display:grid !important;
     grid-template-rows: auto auto;
-    grid-template-columns: .5fr 1fr;
+    grid-template-columns: 1fr 1fr;
     grid-row-gap: 20px;
     grid-column-gap: 20px;
     grid-auto-columns: 1fr;
