--- a/assets/css/events3.css
+++ b/assets/css/events3.css
@@ -40,7 +40,7 @@ h3{
     margin-bottom: 5px;
 }
 
-.right-col{
+.left-col{
     grid-column: 1;
     grid-row:1;
     padding:10px;
@@ -77,7 +77,7 @@ h3{
 }
 
 
-.event-corner-time-cell{
+.right-col{
     grid-column: 2;
     grid-row:1;
     align-items: flex-end;
