--- a/assets/css/events3.css
+++ b/assets/css/events3.css
@@ -21,6 +21,10 @@ h3{
     margin-top:0px !important;
 }
 
+.events-container{
+    display:flex;
+    align-items: center;
+}
 
 .event-wrapper{
     display:grid;
@@ -33,6 +37,7 @@ h3{
     grid-column-gap: 20px;
     grid-auto-columns: 1fr;
     color:#313844;
+    width: 50%;
 }
 
 
@@ -80,11 +85,7 @@ h3{
 .right-col{
     grid-column: 2;
     grid-row:1;
-    align-items: flex-end;
     padding-top:10px;
-    vertical-align: top;
-    align-content: flex-end;
-    text-align: right;
 }
 
 
@@ -93,7 +94,7 @@ h3{
         display:none;
     }
     .event-wrapper{
-        grid-template-columns: 2fr .5fr;
+        width:100%;
     }
     .event-register-cell,.event-corner-time-cell{
         grid-column: 2;
