--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -11,6 +11,9 @@
     box-sizing: border-box;
 }
 
+.main-content{
+  line-height: 1.2;
+}
 
 .swiper {
     width: 100%;
@@ -177,7 +180,7 @@ h3{
 
   .event-register-cell{
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 1;
     justify-content: flex-end;
     display: flex;
     align-self: end;
