--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -118,7 +118,7 @@ h3{
     display:grid !important;
     grid-template-rows: auto auto;
     grid-template-columns: 1fr 1fr;
-    grid-row-gap: 20px;
+    grid-row-gap: 5px;
     grid-column-gap: 20px;
     grid-auto-columns: 1fr;
   }
@@ -181,8 +181,8 @@ h3{
   .event-register-cell{
     grid-column: 1;
     grid-row: 2;
-    justify-content: flex-start;
+    justify-content: flex-end;
     display: flex;
-    align-self: flex-start;
+    align-self: flex-end;
   }
 }
