--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -15,18 +15,20 @@
 .swiper {
     width: 100%;
     height: 100%;
-  }
+    display:grid;
+    grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
+}
 
 .swiper-slide {
   cursor:grab;
   text-align: center;
   font-size: 18px;
-  display: block;
-  justify-content: center;
-  align-items: center;
+  display: flex;
+  flex-direction:column;
   border-radius:2rem;
   padding: 20px;
   color: #000;
+  margin:20px;
 }
 
 .swiper-slide img {
@@ -34,6 +36,7 @@
   width: 100%;
   object-fit:contain;
   border-radius: 0.5rem;
+  align-self: baseline;
 }
 
 h3{
