--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -15,8 +15,11 @@
 .swiper {
     width: 100%;
     height: 100%;
-    display:grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
+}
+
+.swiper-wrapper{
+  display:grid;
+  grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
 }
 
 .swiper-slide {
