--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -80,7 +80,7 @@ h3{
 }
 
 
-@media screen and (max-width: 670px){
+@media screen and (min-width:584px) and (max-width: 670px){
   .swiper-slide{
     display:grid !important;
     grid-template-rows: auto auto;
@@ -111,7 +111,6 @@ h3{
   .event-register-cell{
     grid-column: 2;
     grid-row: 1;
-    justify-content: flex-end;
-    align-self: end;
+    text-align:right;
   }
 }
