--- a/assets/css/events2v2.css
+++ b/assets/css/events2v2.css
@@ -11,18 +11,22 @@
   box-sizing: border-box;
 }
 
+.main-content{
+line-height: 1.4;
+}
 
 .swiper {
   width: 100%;
   height: 100%;
 }
 
-
 .swiper-slide {
+cursor:grab;
 text-align: center;
 font-size: 18px;
-display: flex;
-flex-direction:column;
+display: block;
+justify-content: center;
+align-items: center;
 border-radius:2rem;
 padding: 20px;
 color: #000;
@@ -33,7 +37,6 @@ display: block;
 width: 100%;
 object-fit:contain;
 border-radius: 0.5rem;
-align-self: baseline;
 }
 
 h3{
@@ -46,14 +49,34 @@ h3{
   margin-top:10px;
 }
 
+.swiper-button-next, .swiper-button-prev {
+position: absolute;
+border-radius:50%;
+width: 40px;
+height: 40px;
+margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
+z-index: 10;
+cursor: pointer;
+display: flex;
+align-items: center;
+justify-content: center;
+color:  var(--light-blue);
+background-color:var(--dark-grey);
+}
+
+.swiper-button-next:after, .swiper-button-prev:after {
+font-size:20px;
+}
+
+
 .main-content h3{
 margin-top:0px;
 }
 
 .event-register-cell{
 justify-content: flex-end;
+display: flex;
 align-self: end;
-margin-top:auto;
 }
 
 .register-button{
@@ -74,8 +97,50 @@ align-items:center;
 text-decoration: none;
 }
 
+@media screen and (min-width: 960px){
+.swiper-slide{
+  height:400px;
+}
+}
 
-@media screen and (min-width:584px) and (max-width: 670px){
+@media screen and (max-width: 959px) and (min-width:650px){
+.swiper-slide{
+  display:grid !important;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
+  grid-row-gap: 5px;
+  grid-column-gap: 20px;
+  grid-auto-columns: 1fr;
+}
+
+.event-banner{
+  grid-column: 1;
+  grid-row: 1;
+  align-self: flex-start;
+}
+
+.swiper-slide img{
+  align-content:flex-start;
+  align-self:flex-start;
+}
+.event-details{
+  grid-column:2;
+  grid-row:1;
+  display:flex;
+  flex-direction: column;
+  align-self: start;
+  }
+  
+.event-register-cell{
+  grid-column: 2;
+  grid-row: 1;
+  justify-content: flex-end;
+  display: flex;
+  align-self: end;
+}
+}
+
+@media screen and (max-width: 649px){
 .swiper-slide{
   display:grid !important;
   grid-template-rows: auto auto;
@@ -104,8 +169,10 @@ text-decoration: none;
   }
 
 .event-register-cell{
-  grid-column: 2;
-  grid-row: 1;
-  text-align:right;
+  grid-column: 1;
+  grid-row: 2;
+  justify-content: flex-end;
+  display: flex;
+  align-self: flex-end;
 }
 }
