--- a/assets/css/events2v2.css
+++ b/assets/css/events2v2.css
@@ -77,6 +77,7 @@ margin-top:0px;
 justify-content: flex-end;
 display: flex;
 align-self: end;
+margin-top:auto;
 }
 
 .register-button{
@@ -140,7 +141,7 @@ text-decoration: none;
 }
 }
 
-@media screen and (max-width: 649px){
+@media screen and (min-width: 450px) and (max-width: 649px){
 .swiper-slide{
   display:grid !important;
   grid-template-rows: auto auto;
