removed main content padding, adjusted slider arrw

--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -17,6 +17,10 @@
     height: 100%;
 }
 
+.main-content-wrapper{
+  padding: 0px !important;
+}
+
 .swiper-wrapper{
   display:grid;
   grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
