--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -24,6 +24,8 @@
 .swiper-wrapper{
   display:grid;
   grid-template-columns: repeat(auto-fill, minmax(min(20rem, 100%), 1fr));
+  column-gap:20px;
+  row-gap:20px;
 }
 
 .swiper-slide {
@@ -32,7 +34,6 @@
   display: flex;
   flex-direction:column;
   border-radius:2rem;
-  padding: 20px;
   color: #000;
 }
 
