--- a/assets/css/events2grid.css
+++ b/assets/css/events2grid.css
@@ -66,7 +66,7 @@ h3{
   margin-top:auto;
 }
 
-.register-button{
+.register-button, button{
   transition:0.3s;
   align-items:center;
   color:#313844;
