--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -27,8 +27,9 @@ font-size: 18px;
 display: block;
 justify-content: center;
 align-items: center;
-border-radius:2rem;
+border-radius:1rem;
 color: #000;
+padding:10px;
 
 &:nth-child(3n-1) {
   background: var(--light-green) !important;
