--- a/assets/css/events2.css
+++ b/assets/css/events2.css
@@ -112,6 +112,10 @@ align-items:center;
 text-decoration: none;
 }
 
+hr{
+  display:none;
+}
+
 @media screen and (min-width: 960px){
 .swiper-slide{
   height:450px;
